--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 ---
 layout: default
-title: Sera - OnePage Multi-Purpose Theme
+title: Ascese - Segurança de dados
 ---
 
 
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span> is your last template theme ever!" button-text="Buy Now" %}
+{% include sections/offer.html offer-text="<strong>E</strong><span class=\"thin\">ntre</span> em contato com nosso consultor via linkedin" button-text="IR" %}
 
 {% include sections/about.html %}
 
 {% include sections/features.html %}
 
-{% include sections/portfolio.html %}
+<!--{% include sections/portfolio.html %}-->
 
 {% include sections/parallax-features.html %}
 
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span> is here, download now!" button-text="Buy Now" %}
+{% include sections/offer.html offer-text="<strong>E</strong><span class=\"thin\">entre</span> em contato com nosso consultor via linkedin" button-text="IR" %}
 
 {% include sections/testimonials.html %}
 
-{% include sections/blog.html %}
+<!--{% include sections/blog.html %}-->
 
 {% include sections/team.html %}
 
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span>, a new generation of themes!" button-text="Buy Now" %}
+{% include sections/offer.html offer-text="<strong>C</strong><span class=\"thin\">onsulte</span>nosso especialista" button-text="IR" %}
 
 {% include sections/prices.html %}
 
 {% include sections/contact.html %}
 
-{% include sections/offer.html offer-text="<strong>S</strong><span class=\"thin\">era</span> is here, download now!" button-text="Buy Now" %}
+{% include sections/offer.html offer-text="<strong>E</strong><span class=\"thin\">ntre</span> em contato com nosso consultor via linkedin" button-text="IR" %}
