--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Ascese - Segurança de dados
 
 {% include sections/parallax-features.html %}
 
-{% include sections/offer.html offer-text="<strong>E</strong><span class=\"thin\">entre</span> em contato com nosso consultor via linkedin" button-text="IR" %}
+{% include sections/offer.html offer-text="<strong>E</strong><span class=\"thin\">ntre</span> em contato com nosso consultor via linkedin" button-text="IR" %}
 
 {% include sections/testimonials.html %}
 
