--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Ascese - Segurança de dados
 
 {% include sections/features.html %}
 
-<!--{% include sections/portfolio.html %}-->
+{% include sections/portfolio.html %}
 
 {% include sections/parallax-features.html %}
 
@@ -18,7 +18,7 @@ title: Ascese - Segurança de dados
 
 {% include sections/testimonials.html %}
 
-<!--{% include sections/blog.html %}-->
+{% include sections/blog.html %}
 
 {% include sections/team.html %}
 
